--- a/static/ladingPrincipal.css
+++ b/static/ladingPrincipal.css
@@ -10,7 +10,90 @@ body {
     color: #000000;
 }
 
-{
+/* =========================
+   HEADER
+========================= */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.header-left 
+.header-center
+.header-right{
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    height: 55px;
+    width: 147px;
+    max-width: 100%;
+}
+
+.contenedor-texto {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  width: 100%;
+}
+
+.header-spacer {
+    height: 70px;
+}
+
+.title {
     text-align: center;
-    color: #ffffff;
+    color: rgb(255, 255, 255);
+}
+
+/* =========================
+   MENÚ DESPLEGABLE
+========================= */
+.container-header {
+  position: relative;
+  display: inline-block;
+}
+
+.btn {
+  background-color: transparent;
+  padding: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropDown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1001;
+}
+
+.dropDown a {
+  display: block;
+  padding: 12px 16px;
+  text-decoration: none;
+  color: #333;
+}
+
+.dropDown a:hover {
+  background-color: aqua;
+}
+
+.dropDown.show {
+  display: block;
 }
