--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -33,20 +33,31 @@
             </div>
         </div>
 
-        <div class="header-center"></div>
+        <div class="header-center">
+            <img src="/img/pokedex-removebg-preview.png" alt="" class="logo">
+        </div>
 
-        <div class="header-right"></div>
+        <div class="header-right">
+            <button class="btn">CONTACTANOS</button>
+        </div>
     </header>
 
     <div class="header-spacer"></div>
 
-    <main>
-        <h1 class="title">¿Que son los pokemones?</h1>
-        <p>Los Pokémon son criaturas ficticias con diferentes formas, tamaños y habilidades que habitan el mundo de la franquicia Pokémon. El nombre Pokémon es una abreviatura de "Monstruos de Bolsillo" (Pocket Monsters), y la franquicia fue creada por Satoshi Tajiri. Los "Entrenadores" los crían, cuidan y entrenan para que se vuelvan más fuertes, aprendan nuevos movimientos y, en muchos casos, evolucionen a formas más poderosas. </p>
+
+        <div class="nube-main">
+            <h1>¿Que son los pokemones?</h1>
+        </div>
+
+        <div class="main-spacer"></div>
+        
+        <div class="nube-p">
+                <p>Los Pokémon son criaturas ficticias con diferentes formas, tamaños y habilidades que habitan el mundo de la franquicia Pokémon. El nombre Pokémon es una abreviatura de "Monstruos de Bolsillo" (Pocket Monsters), y la franquicia fue creada por Satoshi Tajiri. Los "Entrenadores" los crían, cuidan y entrenan para que se vuelvan más fuertes, aprendan nuevos movimientos y, en muchos casos, evolucionen a formas más poderosas. </p>
+        </div>
         <h2>Mundo Pokemon</h2>
         <ul>
             <li>
-                <h3>Regiones</h3>
+                <h3>Regiones 🌍</h3>
                 <p>las regiones son...</p>
             </li>
             <li>
@@ -59,8 +70,7 @@
                 </ul>
             </li>
         </ul>
-        <h2 class="title">Tipos de Pokemon</h2> 
-        <h3>Concepto</h3>
+        <h1 class="title">Tipos de Pokemon</h1> 
         <p>Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.</p>
         <p>En el universo Pokémon, existen 18 tipos elementales, los cuales definen las fortalezas, debilidades, resistencias e inmunidades de cada criatura y sus movimientos. Esta tabla de tipos es fundamental para la estrategia de los combates, ya que un movimiento de un tipo puede ser muy efectivo (x2), poco efectivo (x 21), o incluso no tener efecto (x0) contra un Pokémon de otro tipo.</p>
         <p>A continuación, se presenta el concepto completo de cada uno de los 18 tipos de Pokémon:</p>
@@ -93,7 +103,7 @@
                 <b>Tipo Hielo</b>: Representa el frío, la nieve y el hielo. Sus ataques pueden congelar a los oponentes.
             </li>
             <li>
-                <a>Tipo Lucha</>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
+                <a>Tipo Lucha</d>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
             </li>
             <li>
                 <a>Tipo Normal</a>: Representa lo común y habitual. Los Pokémon de este tipo suelen ser de los primeros en encontrarse y tienen una amplia variedad de movimientos.
