modified:   static/app.js 	modified:   static/ladingPrincipal.css 	modified:   static/roca.js 	new file:   templates/TIPOS DE POKEMON/fantasma.html 	modified:   templates/TIPOS DE POKEMON/roca.html 	modified:   templates/ladingPrincipal.html

--- a/templates/TIPOS DE POKEMON/roca.html
+++ b/templates/TIPOS DE POKEMON/roca.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roca</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/static/roca.css">
 </head>
 <body>
@@ -13,5 +14,5 @@
         <div id="rock-type-container" class="pokemon-list"></div>
     </div>
 </body>
-<script src="/static/roca.js"></script>
+<script src="/static/app.js"></script>
 </html>
