--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
     <link type="img/logo" rel="shortcut icon" href="/img/pokemon-logo.jpg" sizes="180x180" data-react-helmet="true">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/static/ladingPrincipal.css">
 </head>
 <body>
@@ -38,7 +39,9 @@
         </div>
 
         <div class="header-right">
-            <button class="btn">CONTACTANOS</button>
+            <a href="https://wa.me/573011907952">
+                <button class="btn">CONTACTENOS</button>
+            </a>
         </div>
     </header>
 
@@ -52,9 +55,15 @@
         <div class="main-spacer"></div>
         
         <div class="nube-p">
-                <p>Los Pokémon son criaturas ficticias con diferentes formas, tamaños y habilidades que habitan el mundo de la franquicia Pokémon. El nombre Pokémon es una abreviatura de "Monstruos de Bolsillo" (Pocket Monsters), y la franquicia fue creada por Satoshi Tajiri. Los "Entrenadores" los crían, cuidan y entrenan para que se vuelvan más fuertes, aprendan nuevos movimientos y, en muchos casos, evolucionen a formas más poderosas. </p>
+            <p>Los Pokémon son criaturas ficticias con diferentes formas, tamaños y habilidades que habitan el mundo de la franquicia Pokémon. El nombre Pokémon es una abreviatura de "Monstruos de Bolsillo" (Pocket Monsters), y la franquicia fue creada por Satoshi Tajiri. Los "Entrenadores" los crían, cuidan y entrenan para que se vuelvan más fuertes, aprendan nuevos movimientos y, en muchos casos, evolucionen a formas más poderosas. </p>
         </div>
-        <h2>Mundo Pokemon</h2>
+
+        <div class="main-spacer"></div>
+
+        <div class="nube-main">
+            <h2>Mundo Pokemon</h2>
+        </div>
+
         <ul>
             <li>
                 <h3>Regiones 🌍</h3>
@@ -70,7 +79,7 @@
                 </ul>
             </li>
         </ul>
-        <h1 class="title">Tipos de Pokemon</h1> 
+        <h1>Tipos de Pokemon</h1> 
         <p>Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.</p>
         <p>En el universo Pokémon, existen 18 tipos elementales, los cuales definen las fortalezas, debilidades, resistencias e inmunidades de cada criatura y sus movimientos. Esta tabla de tipos es fundamental para la estrategia de los combates, ya que un movimiento de un tipo puede ser muy efectivo (x2), poco efectivo (x 21), o incluso no tener efecto (x0) contra un Pokémon de otro tipo.</p>
         <p>A continuación, se presenta el concepto completo de cada uno de los 18 tipos de Pokémon:</p>
