--- a/static/ladingPrincipal.css
+++ b/static/ladingPrincipal.css
@@ -66,7 +66,7 @@ body {
 }
 
 .nube-p {
-    background-color: #70e2d9;
+    background-color: #ffffff;
     color: black;
     padding: 20px 40px;
     border-radius: 50px;
