estlitos y imagenes agregados

--- a/templates/TIPOS DE POKEMON/roca.html
+++ b/templates/TIPOS DE POKEMON/roca.html
@@ -14,5 +14,5 @@
         <div id="rock-type-container" class="pokemon-list"></div>
     </div>
 </body>
-<script src="/static/app.js"></script>
+<script src="/static/roca.js"></script>
 </html>
