--- a/static/ladingPrincipal.css
+++ b/static/ladingPrincipal.css
@@ -22,7 +22,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
+  background-image: url("/img/Gemini_Generated_Image_cqr3z9cqr3z9cqr3.png");
+  background-size: cover;
+  background-position: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
@@ -56,8 +58,12 @@ body {
 }
 
 .nube-main {
-    background-color: #fff;
-    color: black;
+    background-image: url("/img/Gemini_Generated_Image_sxh8b7sxh8b7sxh8.png");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
     padding: 20px 40px;
     border-radius: 50px;
     position: relative;
@@ -66,8 +72,13 @@ body {
 }
 
 .nube-p {
-    background-color: #ffffff;
-    color: black;
+    /* background-color: #ffffff; */
+    background-image: url("/img/Gemini_Generated_Image_ujiyasujiyasujiy.png");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
     padding: 20px 40px;
     border-radius: 50px;
     position: relative;
@@ -75,14 +86,18 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
-.nube h1 {
-    background-color: #fff;
-    color: black;
+.nube-li {
+    background-image: url("/img/Gemini_Generated_Image_lpju1jlpju1jlpju.png");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
     padding: 20px 40px;
     border-radius: 50px;
     position: relative;
     display: inline-block;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3)
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 /* =========================
