--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -79,63 +79,67 @@
                 </ul>
             </li>
         </ul>
-        <h1>Tipos de Pokemon</h1> 
-        <p>Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.</p>
-        <p>En el universo Pokémon, existen 18 tipos elementales, los cuales definen las fortalezas, debilidades, resistencias e inmunidades de cada criatura y sus movimientos. Esta tabla de tipos es fundamental para la estrategia de los combates, ya que un movimiento de un tipo puede ser muy efectivo (x2), poco efectivo (x 21), o incluso no tener efecto (x0) contra un Pokémon de otro tipo.</p>
-        <p>A continuación, se presenta el concepto completo de cada uno de los 18 tipos de Pokémon:</p>
+        <h1 div class="nube-main">Tipos de Pokemon</h1> 
+        <p class="nube-p">Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.
+        <br>
+        <br>
+        En el universo Pokémon, existen 18 tipos elementales, los cuales definen las fortalezas, debilidades, resistencias e inmunidades de cada criatura y sus movimientos. Esta tabla de tipos es fundamental para la estrategia de los combates, ya que un movimiento de un tipo puede ser muy efectivo (x2), poco efectivo (x 21), o incluso no tener efecto (x0) contra un Pokémon de otro tipo.
+        <br>
+        <br>
+        A continuación, se presenta el concepto completo de cada uno de los 18 tipos de Pokémon:</p>
         <ol>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Acero</b>: Se asocia a la dureza, la defensa y los metales. Los Pokémon de este tipo suelen tener una gran resistencia física.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Agua</b>: Representa el agua en todas sus formas: ríos, mares, lluvia, etc. Es el tipo más común y versátil.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Bicho</b>: Inspirado en insectos y arácnidos. A menudo son rápidos y pueden aprender movimientos para infligir estados alterados.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Dragon</b>: Representa criaturas poderosas y míticas, a menudo con una gran fuerza y estadísticas equilibradas.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Electrico</b>: Se asocia a la electricidad y la velocidad. Los Pokémon de este tipo son conocidos por su rapidez y ataques especiales.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Fantasma</b>: Relacionado con lo paranormal, espectros y seres del más allá. Pueden atravesar objetos y son inmunes a ciertos ataques.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Fuego</b>: Simboliza el fuego, el calor y la explosividad. Los Pokémon de este tipo a menudo tienen ataques especiales poderosos.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Hada</b>: Un tipo introducido en la sexta generación. Se basa en criaturas de cuentos de hadas y mitología, a menudo con un aspecto dulce o mágico.
             </li>
-            <li>
+            <li class="nube-li">
                 <b>Tipo Hielo</b>: Representa el frío, la nieve y el hielo. Sus ataques pueden congelar a los oponentes.
             </li>
-            <li>
+            <li class="nube-li">
                 <a>Tipo Lucha</d>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
             </li>
-            <li>
+            <li class="nube-li">
                 <a>Tipo Normal</a>: Representa lo común y habitual. Los Pokémon de este tipo suelen ser de los primeros en encontrarse y tienen una amplia variedad de movimientos.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="">Tipo Planta</a>: Se asocia a la naturaleza, las plantas y los bosques. Pueden aprender movimientos de recuperación y ataques que causan estados alterados.
             </li>
-            <li>
+            <li class="nube-li">
                 <a>Tipo Psiquico</a>: Relacionado con el poder mental y la telequinesis. Sus ataques especiales son a menudo muy fuertes.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="/templates/TIPOS DE POKEMON/roca.html">Tipo Roca</a>: Simboliza las rocas, la piedra y la geología. Son conocidos por su alta defensa física.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="">Tipo Siniestro</a>: Introduce un elemento de maldad y oscuridad, a menudo con ataques que explotan las debilidades del oponente.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="">Tipo Tierra</a>: Asociado a la tierra, el suelo y los terremotos. Tienen ataques físicos muy potentes.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="">Tipo Veneno</a>: Representa el veneno, toxinas y sustancias peligrosas. Sus ataques pueden envenenar y debilitar al oponente con el tiempo.
             </li>
-            <li>
+            <li class="nube-li">
                 <a href="">Tipo Volador</a>: Se asocia al aire, el viento y las criaturas voladoras. Suelen ser muy rápidos.
             </li>
         </ol>
