--- a/static/ladingPrincipal.css
+++ b/static/ladingPrincipal.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("/img/thimo-pedersen-dip9IIwUK6w-unsplash.jpg");
+    background-image: url("/img/Gemini_Generated_Image_ejwxz2ejwxz2ejwx.png");
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: overlay;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
