--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
-    <link type="img/logo" rel="shortcut icon" href="/img/pokemon-logo.jpg" sizes="180x180" data-react-helmet="true">
+    <link type="img/logo" rel="shortcut icon" href="/img/logo.jpg" sizes="180x180" data-react-helmet="true">
     <link rel="stylesheet" href="/static/ladingPrincipal.css">
 </head>
 <body>
@@ -33,9 +33,9 @@
             </div>
         </div>
 
-        <div class="header-center">
-            <img src="/img/pokedex-removebg-preview.png" alt="" class="logo">
-        </div>
+        <!-- <div class="header-center">
+            <img src="" alt="" class="logo">
+        </div> -->
 
         <div class="header-right">
             <a href="https://wa.me/573011907952">
