--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
-    <link type="img/logo" rel="shortcut icon" href="/img/logo.jpg" sizes="180x180" data-react-helmet="true">
+    <link type="img/logo" rel="shortcut icon" href="/img/logoN.png" sizes="180x180" data-react-helmet="true">
     <link rel="stylesheet" href="/static/ladingPrincipal.css">
 </head>
 <body>
@@ -60,24 +60,11 @@
         <div class="main-spacer"></div>
 
         <div class="nube-main">
-            <h2>Mundo Pokemon</h2>
+            <h1>Mundo Pokemon</h1>
         </div>
 
-        <ul>
-            <li>
-                <h3>Regiones 🌍</h3>
-                <p>las regiones son...</p>
-            </li>
-            <li>
-                <h3>Elementos clave</h3>
-                <ul>
-                    <li>
-                        <h4>Poke Balls</h4>
-                        <p>Las poke ball son...</p>
-                    </li>
-                </ul>
-            </li>
-        </ul>
+        <div class="main-spacer"></div>
+
         <h1 div class="nube-main">Tipos de Pokemon</h1> 
         <p class="nube-p">Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.
         <br>
@@ -90,54 +77,71 @@
             <li class="nube-li">
                 <b>Tipo Acero</b>: Se asocia a la dureza, la defensa y los metales. Los Pokémon de este tipo suelen tener una gran resistencia física.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Agua</b>: Representa el agua en todas sus formas: ríos, mares, lluvia, etc. Es el tipo más común y versátil.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Bicho</b>: Inspirado en insectos y arácnidos. A menudo son rápidos y pueden aprender movimientos para infligir estados alterados.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Dragon</b>: Representa criaturas poderosas y míticas, a menudo con una gran fuerza y estadísticas equilibradas.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Electrico</b>: Se asocia a la electricidad y la velocidad. Los Pokémon de este tipo son conocidos por su rapidez y ataques especiales.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Fantasma</b>: Relacionado con lo paranormal, espectros y seres del más allá. Pueden atravesar objetos y son inmunes a ciertos ataques.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Fuego</b>: Simboliza el fuego, el calor y la explosividad. Los Pokémon de este tipo a menudo tienen ataques especiales poderosos.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Hada</b>: Un tipo introducido en la sexta generación. Se basa en criaturas de cuentos de hadas y mitología, a menudo con un aspecto dulce o mágico.
             </li>
+            <br>
             <li class="nube-li">
                 <b>Tipo Hielo</b>: Representa el frío, la nieve y el hielo. Sus ataques pueden congelar a los oponentes.
             </li>
+            <br>
             <li class="nube-li">
                 <a>Tipo Lucha</d>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
             </li>
+            <br>
             <li class="nube-li">
                 <a>Tipo Normal</a>: Representa lo común y habitual. Los Pokémon de este tipo suelen ser de los primeros en encontrarse y tienen una amplia variedad de movimientos.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="">Tipo Planta</a>: Se asocia a la naturaleza, las plantas y los bosques. Pueden aprender movimientos de recuperación y ataques que causan estados alterados.
             </li>
+            <br>
             <li class="nube-li">
                 <a>Tipo Psiquico</a>: Relacionado con el poder mental y la telequinesis. Sus ataques especiales son a menudo muy fuertes.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="/templates/TIPOS DE POKEMON/roca.html">Tipo Roca</a>: Simboliza las rocas, la piedra y la geología. Son conocidos por su alta defensa física.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="">Tipo Siniestro</a>: Introduce un elemento de maldad y oscuridad, a menudo con ataques que explotan las debilidades del oponente.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="">Tipo Tierra</a>: Asociado a la tierra, el suelo y los terremotos. Tienen ataques físicos muy potentes.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="">Tipo Veneno</a>: Representa el veneno, toxinas y sustancias peligrosas. Sus ataques pueden envenenar y debilitar al oponente con el tiempo.
             </li>
+            <br>
             <li class="nube-li">
                 <a href="">Tipo Volador</a>: Se asocia al aire, el viento y las criaturas voladoras. Suelen ser muy rápidos.
             </li>
