--- a/static/roca.css
+++ b/static/roca.css
@@ -1,13 +1,43 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("/img/thimo-pedersen-dip9IIwUK6w-unsplash.jpg");
+    background-image: url("/img/body.png");
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
     height: 100vh;
     padding: 20px;
     color: #000000;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url("/img/header.png");
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.header-left 
+.header-center
+.header-right{
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    height: 55px;
+    width: 147px;
+    max-width: 100%;
 }
 
 h1 {
@@ -23,11 +53,6 @@ h1 {
     padding: 20px;
 } 
 
-/* h2 {
-    border-bottom: 2px solid #ff7171;
-    padding-bottom: 10px;
-    margin-top: 0;
-}  */
 
 .pokemon-list {
     display: flex;
