--- a/templates/TIPOS DE POKEMON/roca.html
+++ b/templates/TIPOS DE POKEMON/roca.html
@@ -5,14 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roca</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="/static/roca.css">
+    <link rel="stylesheet" href="/static/ladingPrincipal.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header-left">
+            <div class="container-header">
+                <button class="btn"><i class="arrow"></i>TIPOS</button>
+                <div class="dropDown">
+                    <a href="">ACERO</a>
+                    <a href="">AGUA</a>
+                    <a href="">BICHO</a>
+                    <a href="">DRAGON</a>
+                    <a href="">ELECTRICO</a>
+                    <a href="">FANTASMA</a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href="/templates/TIPOS DE POKEMON/roca.html">ROCA</a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="header-center">
+            <img src="" alt="" class="logo">
+        </div> -->
+
+        <div class="header-right">
+            <a href="https://wa.me/573011907952">
+                <button class="btn">CONTACTENOS</button>
+            </a>
+        </div>
+    </header>
+    
     <div class="category-container" id="tipo-roca">
         <h2>Tipo Roca 🪨</h2>
         <a href="/templates/ladingPrincipal.html"><button>Volver</button></a>
         <div id="rock-type-container" class="pokemon-list"></div>
     </div>
 </body>
-<script src="/static/roca.js"></script>
+<script src="/static/app.js"></script>
 </html>
